--- a/duck.css
+++ b/duck.css
@@ -1,4 +1,5 @@
 .zone {
+    margin: auto;
     border: 2px black solid;
     width: 600px;
     height: 600px;
@@ -12,9 +13,18 @@
     position: absolute;
 }
 button {
+    margin: auto;
     padding: 3rem;
     margin-left: 2rem;
 }
 body {
-    display: flex;
+    display: inline-block;
+}
+p {
+    margin: auto;
+    border: 1px black solid;
+    border-radius: 10px;
+    padding: 2rem;
+    width: 20%;
+
 }
